syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.distledgerserver;

import "DistLedgerCommonDefinitions.proto";

// Cross-server interface of the DistLedger Service (only for phases 2 & 3 of the project)

message PropagateStateRequest {
  LedgerState ledgerState = 1;
}

message PropagateStateResponse {
  ErrorPropagate error = 1;
}

enum ErrorPropagate {
  OK = 0;
  UNAVAILABLE = 1;
}

service DistLedgerCrossServerService {
  rpc propagateState(PropagateStateRequest) returns (PropagateStateResponse);
}
